test: fix bug with icon on mobile

--- a/src/components/Buttons/Buttons.module.less
+++ b/src/components/Buttons/Buttons.module.less
@@ -1,8 +1,8 @@
 .box-dimensions(@min, @max) {
-  min-height: @min;
   min-width: @min;
-  max-height: @max;
-  max-width: @max;
+  min-height: @min;
+  // max-height: @max;
+  // max-width: @max;
 }
 
 // root styles for all buttons
@@ -84,13 +84,13 @@
 
 .circle.primary,
 .circle.secondary {
-  // &.large {
-  //   .box-dimensions(40px, 40px);
+  &.large {
+    .box-dimensions(40px, 40px);
 
-  //   @media (max-width: 640px) {
-  //     .box-dimensions(32px, 32px);
-  //   }
-  // }
+    @media (max-width: 640px) {
+      .box-dimensions(32px, 32px);
+    }
+  }
   &.medium {
     .box-dimensions(32px, 32px);
   }
@@ -99,13 +99,13 @@
   }
 }
 
-// .circle.primary {
-//   // background-color: var(--accent-primary);
+.circle.primary {
+  background-color: var(--accent-primary);
 
-//   // &:hover {
-//   //   background-color: var(--accent-secondary);
-//   // }
-// }
+  &:hover {
+    background-color: var(--accent-secondary);
+  }
+}
 
 .circle.secondary {
   border: 1px solid var(--bg-border);
